--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,9 @@ room = "2.7.2"
 kotlinxtest = "1.7.3"
 mockk = "1.13.10"
 turbine = "1.1.0"
+androidx-core = "2.2.0"
+runner = "1.5.2"
+rules = "1.5.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -50,16 +53,21 @@ okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor",
 paging-runtime = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging" }
 paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging" }
 paging-common = { group = "androidx.paging", name = "paging-common", version.ref = "paging"}
+paging-testing = { group = "androidx.paging", name = "paging-testing", version.ref = "paging"}
 
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 room-paging = { group = "androidx.room", name = "room-paging", version.ref = "room" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+room-testing = { group = "androidx.room", name = "room-testing", version.ref = "room" }
 
 kotlinx-coroutine-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinxtest"}
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk"}
 turbine = { group = "app.cash.turbine", name = "turbine", version.ref = "turbine"}
 
+androidx-core-testing = { group = "androidx.arch.core", name = "core-testing", version.ref = "androidx-core"}
+runner = { group = "androidx.test", name = "runner", version.ref = "runner"}
+rules = { group = "androidx.test", name = "rules", version.ref = "rules"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
